Created the project and DataBase

--- a/Inter-Assignment/Inter-Assignment/appsettings.json
+++ b/Inter-Assignment/Inter-Assignment/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-2VP90FO;Database=InterAssignment;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
